# FutureBuddy

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  .test-results.txt  CLAUDE.md  Dockerfile  FutureFlow.md  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  test-checklist.sh  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: app.json  metro.config.js  package.json
app/app/: _layout.tsx  actions.tsx  files.tsx  index.tsx  settings.tsx  terminal.tsx
app/app/(tabs)/: _layout.tsx  actions.tsx  files.tsx  index.tsx  models.tsx  settings.tsx  terminal.tsx  tools.tsx
app/plugins/: withTapService.js  withTapService.ts
app/src/components/: ActionCard.tsx  ChatInput.tsx  MessageBubble.tsx  StatusCard.tsx  TerminalInput.tsx  ToolStatusBar.tsx  VoiceAccessGrid.tsx  XTermView.tsx
app/src/hooks/: useActions.ts  useChat.ts  useConnection.ts  useGridCommands.ts  useModels.ts  useShell.ts  useStatus.ts  useTools.ts
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: lib.rs  main.rs
docs/: posture-guide.html  samsung-dex.md
server/: package.json
server/src/: config.test.ts  config.ts  index.ts  sql.js.d.ts
shared/: package.json
shared/src/: constants.test.ts  constants.ts  index.ts  types.ts
web/: Dockerfile  index.html  nginx.conf  package.json  test-browser.mjs  vite.config.ts
web/public/: manifest.json
web/src/: App.tsx  main.tsx  styles.css
(+127 files in other folders)
