[package]
name = "futurebuddy-desktop"
version = "0.1.0"
description = "FutureBuddy Desktop — Your 24/7 IT Department"
authors = ["#1 Future"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "futurebuddy_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
